--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/bcryptjs": "^2.4.6",
     "ai": "^4.3.17",
     "bcryptjs": "^3.0.2",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "openai": "^5.9.0",
