--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "setup:admin": "node scripts/init-admin.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
